contrast and font increase fix

--- a/passacaglia/src/Css/Logo_web.css
+++ b/passacaglia/src/Css/Logo_web.css
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  z-index: 999999;
+  z-index: 9;
   cursor: pointer;
 }
 
